Refactor and modernize codebase for clarity and consistency
Replaces deprecated or less idiomatic Java constructs with modern alternatives (e.g., StringBuffer to StringBuilder, explicit type parameters, use of .isEmpty(), .addFirst(), etc.), improves static imports, and enforces final class declarations where appropriate. Also updates file reading to use Files.readString, streamlines comparator and lambda usage, and fixes minor logic and grouping issues for better readability and maintainability.