@@ -1,8 +1,8 @@
 package ti4.commands.help;
 
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import ti4.ResourceHelper;
 import ti4.commands.Subcommand;
@@ -18,7 +18,7 @@ class WhatsTIGL extends Subcommand {
     public void execute(SlashCommandInteractionEvent event) {
         String path = ResourceHelper.getInstance().getHelpFile("WhatsTIGL.txt");
         try {
-            String message = new String(Files.readAllBytes(Paths.get(path)), StandardCharsets.UTF_8);
+            String message = Files.readString(Paths.get(path));
             MessageHelper.sendMessageToEventChannel(event, message);
         } catch (Exception e) {
             MessageHelper.sendMessageToEventChannel(
